clears and adds messages to the DOM

--- a/client/index.html
+++ b/client/index.html
@@ -18,5 +18,9 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
     </div>
+    <div id="chats"> 
+     <!--  <div class="message">
+      </div> -->
+    </div>
   </body>
 </html>
