trying to fix click functions

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <form id='roomSelect'></form> 
     </div>
     <div id="chats"> 
      <!--  <div class="message">
