--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,9 +4,11 @@
   <title>Mocha Spec Runner</title>
   <link rel="stylesheet" href="lib/mocha/mocha.css">
   <script src="lib/jquery.js"></script>
+  <script src="lib/underscore-min.js"></script>
   <script src="lib/mocha/mocha.js"></script>
   <script src="lib/chai/chai.js"></script>
   <script src="lib/sinon/sinon.js"></script>
+
   <script>
     mocha.setup('bdd');
     var expect = chai.expect;
