--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/underscore/underscore-min.js"></script>
+    <script src="lib/underscore-min.js"></script>
 
     <!-- your scripts -->
     <script src="env/config.js"></script>
